[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Eyes-Network"
version = "0.0.3"
description = "A Python library for creating neural networks"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "eyes-studio"}
]

dependencies = []
